# scientificpub2md

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml  requirements.txt  serve_vllm.sh
.github/workflows/: publish.yml
scientificpub2md/: __init__.py  clean.py  cli.py  extract.py  prompts.py  sections.py
tests/: test_clean.py  test_extract.py  test_sections.py
