[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scientificpub2md"
version = "0.1.0"
description = "Lightweight VLM OCR that turns scientific manuscript PDFs into clean Markdown (.md) or simple '##' headers, on CPU or GPU."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jamey O'Neill", email = "jimnoneill@gmail.com" }]
keywords = ["ocr", "pdf", "markdown", "vlm", "qwen", "scientific-papers", "document-parsing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: Markdown",
]

# Base runtime: PDF rendering + the in-process VLM (transformers) on CPU or GPU.
dependencies = [
    "PyMuPDF>=1.24",
    "Pillow>=10.0",
    "transformers>=4.57",
    "qwen-vl-utils>=0.0.8",
    "torch>=2.4",
    "accelerate>=0.30",
    "requests>=2.28",
]

[project.optional-dependencies]
# Fast batched GPU serving via an OpenAI-compatible vLLM server (advanced; see serve_vllm.sh).
vllm = ["vllm>=0.6"]

[project.urls]
Homepage = "https://github.com/jimnoneill/scientificpub2md"
Repository = "https://github.com/jimnoneill/scientificpub2md"

[project.scripts]
scientificpub2md = "scientificpub2md.cli:main"
scipub2md = "scientificpub2md.cli:main"

[tool.setuptools]
packages = ["scientificpub2md"]
